<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    tools:context=".fragment.SecondFragment">

    <Button
        android:id="@+id/botaoCategoria"
        style="?attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/config_add_categoria"
        android:textAlignment="viewStart" />

    <Button
        android:id="@+id/botaoAcao"
        style="?attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/config_add_acao"
        android:textAlignment="viewStart" />

    <Button
        android:id="@+id/botaoBase"
        style="?attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/config_bases"
        android:textAlignment="viewStart" />
</LinearLayout>